# onnxruntime

./: .gitignore  README_CN.md
csharp/src/Microsoft.ML.OnnxRuntime/: DisposableNamedOnnxValue.shared.cs  ManagedProjections.shared.cs  NamedOnnxValue.shared.cs
dockerfiles/: build_docker.sh  launch_docker.sh  ubuntu1804.Dockerfile
samples/cxx/: CMakeLists.txt  CMakeLists.txt.old  CMakeSamplesTemplate.txt.old  CMakeTemplate.txt  README.md  prep_image.py
samples/cxx/common/: image_common.c  image_file.h  image_file_libpng.c
samples/cxx/fns_candy_style_transfer/: CMakeLists.txt  CMakeLists.txt.old  fns_candy_style_transfer.c
samples/cxx/mnist/: CMakeLists.txt  mnist.cpp
